# aptos-polymarket

./: .gitignore  AGENTS.md  CLAUDE.md  DEMO_COMMANDS.md  DEMO_GUIDE.md  DEMO_PLAYBOOK.md  DUAL_DEMO_PLAYBOOK.md  PLAN.md  PRD-polymarket-match.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
config/: seed-accounts.js  seed-accounts.ts  wallets.ts
contracts/: Move.toml  new-deployer.key  new-deployer.key.pub
docs/: 30K-TPS-DEMO-ARCHITECTURE.md  APTOS_POLYMARKET_ARCHITECTURE.md  APTOS_TPS_ANALYSIS_CONSOLIDATED.md  BENCHMARK_GUIDE.md  BENCHMARK_RESULTS.md  BOTTLENECK_ANALYSIS.md  CONTRACT_DEPLOYMENT_GUIDE.md  DEMO-NOTES.md  DEMO-RUNBOOK.md  FULLNODE_LATENCY_ANALYSIS.md  GAS_PROFILING_REPORT_JAN12_2026.md  HFT-SETUP.md  JAN30-2026-14-WORKER-SCALING.md  JAN30-2026-21-WORKER-CHECKPOINT.md  LIQUIDITY_ANALYSIS.md  MAINNET_ENDPOINTS.md  MARKETS.md  MEGAETH_VS_APTOS_RESEARCH_REPORT.md  MIGRATION_CHECKLIST.md  ORACLE-AND-PRIVACY-DESIGN-REVIEW.md  ORACLE_ARCHITECTURE_PROPOSAL.md  POLY-TOKEN-ORACLE-ANALYSIS.md  POLYMARKET-ORACLE-RESEARCH-INDEX.md  POLYMARKET-PANAMA-CORPORATE-STRUCTURE-ANALYSIS.md  POLYMARKET-US-RULEBOOK-INVESTIGATION.md  POLYMARKET_FAILURE_DATA.md  POLYMARKET_INFRASTRUCTURE_REPORT.md  POLYMARKET_INVESTIGATION_ANSWERS.md  POLYMARKET_INVESTIGATION_QUESTIONS.md  SCRIPTS_GUIDE.md  SEED_ACCOUNTS_500.md  TPS_BENCHMARKS.md  TPS_MAX_BENCHMARK.md  (+10 more)
loadtest/: .env.example  .gitignore  Cargo.toml  README.md
loadtest/scripts/: create_markets.sh  fund_and_create_markets.sh  fund_and_run.sh  run_loadtest.sh
loadtest/src/: config.rs  main.rs  polymarket_entrypoint.rs
(+417 files in other folders)
