[package]
name = "polymarket-loadtest"
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"

[dependencies]
anyhow = "1.0.86"
aptos-transaction-emitter-lib = { git = "https://github.com/aptos-labs/aptos-core", rev = "0d988b20d26df99ee27d711754a3a295002eddcc" }
aptos-transaction-generator-lib = { git = "https://github.com/aptos-labs/aptos-core", rev = "0d988b20d26df99ee27d711754a3a295002eddcc" }
aptos-transaction-workloads-lib = { git = "https://github.com/aptos-labs/aptos-core", rev = "0d988b20d26df99ee27d711754a3a295002eddcc" }
aptos-logger = { git = "https://github.com/aptos-labs/aptos-core", rev = "0d988b20d26df99ee27d711754a3a295002eddcc" }
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", rev = "0d988b20d26df99ee27d711754a3a295002eddcc" }
bcs = "0.1"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
futures = "0.3"
rand = "0.7.3"
hex = "0.4"
reqwest = "0.12"
slh-dsa = "=0.2.0-rc.1"
signature = "=3.0.0-rc.5"
rand_core = "=0.10.0-rc-2"


[[bin]]
name = "polymarket-loadtest"
path = "src/main.rs"

[[bin]]
name = "fund-accounts"
path = "src/bin/fund_accounts.rs"

[[bin]]
name = "create-markets"
path = "src/bin/create_markets.rs"

[patch.crates-io]
serde-reflection = { git = "https://github.com/aptos-labs/serde-reflection", rev = "73b6bbf748334b71ff6d7d09d06a29e3062ca075" }
merlin = { git = "https://github.com/aptos-labs/merlin" }
